# Dacx

./: .env.example  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  analysis_options.yaml  package-lock.json  package.json  pubspec.yaml  run.rosie.dacx.metainfo.xml
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: INSTALL.md  NATIVE_DEPENDENCIES.md  QA.md
docs/ideas/: visualizer.md
flatpak/: dacx-launcher.sh  run.rosie.dacx.desktop  run.rosie.dacx.yaml
integration_test/: player_smoke_test.dart
lib/: debug_agent_log.dart  main.dart
linux/: CMakeLists.txt
macos/: .gitignore
scripts/: check-build-smoke.js  check-coverage.js  check-hygiene.js  check-mac-toolchain.js  check-mac-xpc-helper.sh  check-metainfo-idempotency.js  check-outdated.js  check-release-guard.js  check-static.js  check-version-sync.js  dist-tools.js  embed-mac-document-icon.sh  ensure-draft-release.cjs  flatpak-bundle.js  flutter-build-macos.js  flutter-build-windows.js  generate-licenses.js  generate-update-key.js  git-prune-local-branches.js  gpg-sign.js  mac-codesign.sh  mac-keychain-ssh.sh  mac-reset-launch-services.sh  normalize-iconsets.js  package-release.js  patch-media-kit-linux-cmake.js  patch-media-kit-windows-cmake.js  post-release-assets.js  post-release-assets.test.js  release-finalize.js  release-warning.js  semver-sort.js  setup-flutter.js  setup.js  sync-version.js  test-all.js  update-metainfo.js  vi.js  zip-macos.js
test/: widget_test.dart
windows/: CMakeLists.txt
windows/update_helper/: CMakeLists.txt  main.cpp
(+231 files in other folders)
